style: apply Palantir Java format
Applies the Palantir Java format to all source files as enforced by the
new Gradle Spotless plugin. This establishes a consistent coding style
baseline for the project going forward.

- Reformat all Java files in src/main/java and src/test/java
- Fix indentation, line breaks, and parameter alignment